# Practice

./: README.md  calculator.py  pyproject.toml  requirements-dev.txt  test_calculator.py  Игра-угадайка.py
4task/: .gitignore  DEFECTS.md  README.md
4task/.github/workflows/: tests.yml
4task/src/tour_price/: __init__.py  case_loader.py  service.py
4task/tests/unit/: test_case_loader.py
Practis/: .coverage  04_price_calc_cases.json  calculator.py  test_calculator.py
Practis/.github/workflows/: tests.yml
src/tour_price/: calculator.py
src/tour_price/data/: 04_price_calc_cases.json  __init__.py
tests/integration/: test_price_case_pipeline.py
tests/unit/: test_calculator.py
