[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tour-price-calculator"
version = "1.0.0"
description = "A tested tour price calculator with JSON-driven integration cases."
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tour_price = ["data/*.json"]

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=tour_price",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "integration: tests that combine the JSON loader, service, and calculator",
]

[tool.coverage.run]
branch = true
source = ["tour_price"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

